# OffroadInclinometer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/DisplayTask/: DisplayTask.h  LvglProcess.h
inc/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
inc/IMGs/: IMGs.h
inc/IMUTask/: IMUTask.h
inc/ImageData/: ImageData.h
inc/lvgl/: lv_conf.h
libs/Config/: CMakeLists.txt
libs/Config/inc/: DEV_Config.h
libs/Config/src/: DEV_Config.c
libs/Fusion/: CMakeLists.txt
libs/LCD/: CMakeLists.txt
libs/LCD/src/: LCD_1in28.c
libs/QMI8658/: CMakeLists.txt
libs/QMI8658/inc/: QMI8658.h
libs/QMI8658/src/: QMI8658.c
libs/lvgl/: CMakeLists.txt
src/: main.c
src/DisplayTask/: DisplayTask.c  ImageData.c  LvglProcess.c
src/DisplayTask/IMGs/: BackgroundImg.c  FrontCarImg.c  SideCarImg.c
src/IMUTask/: IMUTask.c
